--- a/cliente_web_instagram_clone/app/views/home/padrao.ejs
+++ b/cliente_web_instagram_clone/app/views/home/padrao.ejs
@@ -18,6 +18,34 @@
 	<script>
 		$(document).ready(function () {
 
+			function carrega_postagens() {
+				var xhr = new XMLHttpRequest();
+				xhr.open("GET", "http://localhost:8686/api");
+
+				xhr.onload = function () {
+					if (xhr.status === 200) {
+
+						var data = $.parseJSON(xhr.responseText);
+
+						for (i = 0; i < data.length; i++) {
+							$('#container_timeline').append(
+								'<div class="publicacao">' +
+								'<span class="titulo">' +
+								data[i].titulo +
+								'</span>' +
+								'<img class="img-post" src="http://localhost:8686/imagens/' +  data[i].url_imagem + '"/>'+
+								'</div>'
+							); 
+						}
+
+					}
+				}
+
+				xhr.send();
+			}
+
+			carrega_postagens();
+
 			$('#btn_incluir').click(function () {
 				$('#container_timeline').hide();
 				$('#container_form').show();
@@ -41,21 +69,25 @@
 
 				var xhr = new XMLHttpRequest();
 
-				xhr.onreadystatechange = function(){
-					if(xhr.readyState == 4){
-						var resposta =xhr.responseText;
+				xhr.onreadystatechange = function () {
+					if (xhr.readyState == 4) {
+						var resposta = xhr.responseText;
 						document.getElementById("mensagem").innerHTML = resposta;
 					}
 				}
 
-				xhr.open("post","http://localhost:8686/api");
+				xhr.open("post", "http://localhost:8686/api");
 				xhr.send(formData);
 
 			});
 
 		});
 	</script>
-
+	<style >
+		.img-post{
+			height: 150px
+		}
+	</style>
 </head>
 
 <body>
