--- a/cliente_web_instagram_clone/app/views/home/padrao.ejs
+++ b/cliente_web_instagram_clone/app/views/home/padrao.ejs
@@ -30,13 +30,48 @@
 						for (i = 0; i < data.length; i++) {
 							$('#container_timeline').append(
 								'<div class="publicacao">' +
-								'<span class="titulo">' +
-								data[i].titulo +
-								'</span>' +
-								'<img class="img-post" src="http://localhost:8686/imagens/' +  data[i].url_imagem + '"/>'+
+									'<span class="titulo">' +
+										data[i].titulo +
+									'</span>' +
+									'<img class="img-post" src="http://localhost:8686/imagens/' +  data[i].url_imagem + '"/>'+
+									'<div class="comentar">'+
+										'<input type="text" class="form-control input_comercio" placeholder="Adicione comentario" id="postagem_'+data[i]._id+'"> '+
+										'<div class="comentarios" id="comentarios_'+ data[i]._id +'"></div>'+
+										'<button class="btn btn-default btn_postagem" type="button" value="'+data[i]._id+'">Comentar</button>'+
 								'</div>'
 							); 
+					
+							if(data[i].comentarios != undefined){
+
+								var comentarios = data[i].comentarios;
+
+								for (j = 0; j < comentarios.length; j++){
+									$('#comentarios_'+data[i]._id).append(
+										'<div class="txt_comentario">'+
+											comentarios[j].comentario +
+										'</div>'
+									);
+								}
+								
+							}
 						}
+
+						$('.btn_postagem').click(function(){
+							var id = this.value;
+							var id_input_comentario = 'postagem_'+id;
+							var comentario = $('#' + id_input_comentario).val();
+
+							var xhr = new XMLHttpRequest()
+							xhr.open('PUT','http://localhost:8686/api/' + id);
+							xhr.setRequestHeader('Content-Type','application/json');
+
+							xhr.onload = function(){
+								if(xhr.status === 200){
+									window.location.href = "/home"
+								}
+							}
+							xhr.send(JSON.stringify({comentario: comentario }) );						
+						})
 
 					}
 				}
